--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^8.0.1
   firebase_messaging: ^15.2.10
   flutter_local_notifications: ^17.0.0
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
