--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.4
   image_picker: ^1.0.7
   path_provider: ^2.1.2
   path: ^1.9.0
@@ -32,6 +32,8 @@ dependencies:
   firebase_messaging: ^15.2.10
   flutter_local_notifications: ^17.0.0
   workmanager: ^0.9.0+3
+  cloud_functions: ^5.6.2
+  go_router: ^17.1.0
 
 dev_dependencies:
   flutter_test:
